# restapi-cpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: AklaHttp.h  Response.h  URLHandler.h
include/api/: Motivation.h
src/: AklaHttp.cpp  Response.cpp  URLHandler.cpp
